[package]
name = "super-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-lab = "0.24.1" 
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.23.1"
url = "2"
pdf-extract = "0.9.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tempfile = "3"
log = "0.4"
env_logger = "0.11.8"
actix-cors = "0.7.1"
anyhow = "1.0"
dotenv = "0.15.0"
serde_json = "1"
walkdir = "2.5.0"
bytes = "1.10.1"
tokio-stream = { version = "0.1", features = ["sync"] }  
